fix: replace Stream.toList for Java 8 compatibility